# st7789_zephyr_smoke_test

./: .clang-format  .gitmodules
apps/pro_cpu/: CMakeLists.txt  Kconfig  prj.conf  st7735_esp32c6.overlay  waveshare_1_47_tft_esp32c6.overlay  waveshare_1_69_touch_tft_esp32s3.overlay
apps/pro_cpu/include/: gif_player.hpp  pin_defines.hpp
apps/pro_cpu/include/gifs/: subway_gif.h  sunset_gif.h  this_is_fine.h
apps/pro_cpu/src/: gif_player.cpp  main.cpp
modules/AnimatedGIF/: CMakeLists.txt
modules/AnimatedGIF/zephyr/: module.yml
scripts/: setup.sh  setup_env.ps1  zephyr.sh
